deployment/python-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-svc
spec:
  selector:
    app: helloworld
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
