deployment/python-app/base/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-world-virtualservice
spec:
  gateways:
    - hello-world-gateway
  http:
    - route:
        - destination:
            port:
              number: 5000
